[package]
name = "operating_system_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

# To turn our compiled kernel into a bootable disk 
# image, it is need to link it with a bootloader
[dependencies]
bootloader = "0.9"
volatile = "0.2.6" # to prevent some optimizations, indicate there are side effects 
spin = "0.5.2" # for spinlock mutex
